# phone_backup

./: phone_backup.py  pyproject.toml  rsync_to_remote.py
ADBSync/FileSystems/: Android.py
tests/: test_phone_backup.py
