[tool.poetry]
name = "phone-backup"
version = "0.1.0"
description = ""
authors = ["Adrien Fichet <adrien.fichet@gmail.com>"]
#readme = "README.md"
#packages = [{include = "phone_backup"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
